vlib/v/checker/tests/globals/unknown_typ.vv
__global x foo
__global (
	y = float(5.0)
)
